--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
 	<title>Viendo Cajas HTML</title>
 </head>
 <body>
+<div>
 <img src="logo.png">
 <h1> Laboratoria </h1>
 <p> Laboratoria enseña a <i>jovenes mujeres </i> a crear productos digitales con el proposito de insentarlas a la creciente economia digital del Perú 
+</div>
 En un periodo de 6 meses , nuestras coders aprenden:</p>
 <ol>
 <h3><li> El lenguaje del futuro</h3>
@@ -16,3 +18,4 @@ En un periodo de 6 meses , nuestras coders aprenden:</p>
 <h3> <li> Aprender a aprender </h3>
 <p> Para triunfar como desarrolladoras webb nuestras coders se convierten en autodidactas </p> </li>
 </body>
+</html>
